<resources>
    <string name="app_name">NYTimesTask</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date">published-date: </string>
    <string name="source" >source: </string>
    <string name="by">written by: </string>
    <string name="section">section: </string>
    <string name="type">type:</string>
    <string name="keywords">keywords: </string>
</resources>